<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bt_examples</name>
  <version>1.0.0</version>
  <description>Ejemplos progresivos de Behavior Trees para ASR</description>
  <maintainer email="rodrigo.perez@urjc.es">Roi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <build_depend>nav2_msgs</build_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <depend>tf2_ros</depend>
  <depend>ament_index_cpp</depend>
  <depend>simple_hri_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
